crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__generic_over_memory_monomorphizes_size_type.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 670
    signature_index: 1
    scopes:
      - kind: Block
        result: U32
    locals:
      - ty: U32
        mutability: Immutable
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 695
                    ty:
                      Function:
                        signature_index: 0
                  arguments:
                    - kind: Noop
                      ty: Unit
                    - kind:
                        LocalGet:
                          local_index: 0
                      ty: U32
              ty: U32
      ty: U32
    static_data: []
  - id: 671
    signature_index: 3
    scopes:
      - kind: Block
        result: U64
    locals:
      - ty: U64
        mutability: Immutable
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 696
                    ty:
                      Function:
                        signature_index: 2
                  arguments:
                    - kind: Noop
                      ty: Unit
                    - kind:
                        LocalGet:
                          local_index: 0
                      ty: U64
              ty: U64
      ty: U64
    static_data: []
  - id: 695
    signature_index: 0
    scopes:
      - kind: Block
        result: U32
    locals:
      - ty: Unit
        mutability: Immutable
      - ty: U32
        mutability: Immutable
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalGet:
                  local_index: 1
              ty: U32
      ty: U32
    static_data: []
  - id: 696
    signature_index: 2
    scopes:
      - kind: Block
        result: U64
    locals:
      - ty: Unit
        mutability: Immutable
      - ty: U64
        mutability: Immutable
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalGet:
                  local_index: 1
              ty: U64
      ty: U64
    static_data: []
signatures:
  - items:
      - Unit
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - Unit
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - Bool
    params_count: 1
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - I32
      - Bool
    params_count: 1
  - items:
      - Bool
      - Bool
    params_count: 1
  - items:
      - I32
      - I32
      - Bool
    params_count: 2
  - items:
      - U32
      - U32
      - Bool
    params_count: 2
  - items:
      - I64
      - I64
      - Bool
    params_count: 2
  - items:
      - U64
      - U64
      - Bool
    params_count: 2
  - items:
      - I8
      - I8
      - Bool
    params_count: 2
  - items:
      - U8
      - U8
      - Bool
    params_count: 2
  - items:
      - I16
      - I16
      - Bool
    params_count: 2
  - items:
      - U16
      - U16
      - Bool
    params_count: 2
  - items:
      - F32
      - F32
      - Bool
    params_count: 2
  - items:
      - F64
      - F64
      - Bool
    params_count: 2
  - items:
      - U8
      - U8
      - I8
    params_count: 2
  - items:
      - U16
      - U16
      - I8
    params_count: 2
  - items:
      - U32
      - U32
      - I8
    params_count: 2
  - items:
      - U64
      - U64
      - I8
    params_count: 2
  - items:
      - I16
      - I16
      - I8
    params_count: 2
  - items:
      - I32
      - I32
      - I8
    params_count: 2
  - items:
      - I64
      - I64
      - I8
    params_count: 2
  - items:
      - Bool
      - Bool
      - I8
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 670
      name: 312
  - Function:
      id: 671
      name: 313
imports: []
memories:
  - id: 667
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
  - id: 668
    source: Internal
    kind: Memory64
    min_pages: ~
    max_pages: ~
aggregates: []
static_entries: []
start_function: ~
