crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__inline_method_is_substituted.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 406
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
        result: U32
      - kind: Block
        parent: 0
        locals: []
        result: U32
      - kind: Block
        parent: 1
        locals: []
        result: U32
      - kind: Block
        parent: 1
        locals: []
        result: U32
      - kind: Block
        parent: 1
        locals: []
        result: Bool
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Block:
                  scope_index: 1
                  expressions:
                    - kind:
                        LocalSet:
                          scope_index: 0
                          local_index: 1
                          value:
                            kind:
                              LocalGet:
                                scope_index: 0
                                local_index: 0
                            ty: U32
                      ty: Unit
                    - kind:
                        Block:
                          scope_index: 0
                          expressions:
                            - kind:
                                IfElse:
                                  condition:
                                    kind:
                                      Block:
                                        scope_index: 4
                                        expressions:
                                          - kind:
                                              LocalSet:
                                                scope_index: 0
                                                local_index: 2
                                                value:
                                                  kind:
                                                    LocalGet:
                                                      scope_index: 0
                                                      local_index: 1
                                                  ty: U32
                                            ty: Unit
                                          - kind:
                                              Block:
                                                scope_index: 0
                                                expressions:
                                                  - kind:
                                                      And:
                                                        left:
                                                          kind:
                                                            GreaterEq:
                                                              left:
                                                                kind:
                                                                  LocalGet:
                                                                    scope_index: 0
                                                                    local_index: 2
                                                                ty: U32
                                                              right:
                                                                kind:
                                                                  Int:
                                                                    value: 97
                                                                ty: U32
                                                          ty: Bool
                                                        right:
                                                          kind:
                                                            LessEq:
                                                              left:
                                                                kind:
                                                                  LocalGet:
                                                                    scope_index: 0
                                                                    local_index: 2
                                                                ty: U32
                                                              right:
                                                                kind:
                                                                  Int:
                                                                    value: 122
                                                                ty: U32
                                                          ty: Bool
                                                    ty: Bool
                                            ty: Bool
                                    ty: Bool
                                  then_block:
                                    kind:
                                      Block:
                                        scope_index: 2
                                        expressions:
                                          - kind:
                                              BitXor:
                                                left:
                                                  kind:
                                                    LocalGet:
                                                      scope_index: 0
                                                      local_index: 1
                                                  ty: U8
                                                right:
                                                  kind:
                                                    Int:
                                                      value: 32
                                                  ty: U8
                                            ty: U32
                                    ty: U32
                                  else_block:
                                    kind:
                                      Block:
                                        scope_index: 3
                                        expressions:
                                          - kind:
                                              LocalGet:
                                                scope_index: 0
                                                local_index: 1
                                            ty: U32
                                    ty: U32
                              ty: U32
                      ty: U32
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 406
      name: 204
imports: []
memories: []
aggregates: []
static_entries: []
start_function: ~
