crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__local_tuple_destructure_lowers_to_aggregate_gets.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 469
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result:
          Aggregate:
            aggregate_index: 0
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        Float:
                          value: 2
                      ty: F64
                    - kind:
                        Int:
                          value: 1
                      ty: I32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
  - id: 470
    signature_index: 3
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
          - ty: I32
            mutability: Immutable
          - ty: F64
            mutability: Immutable
          - ty: I32
            mutability: Immutable
          - ty: F64
            mutability: Immutable
          - ty: F64
            mutability: Immutable
        result: F64
      - kind: Block
        parent: 0
        locals: []
        result: F64
      - kind: Block
        parent: 0
        locals: []
        result: F64
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 0
                  value:
                    kind:
                      Call:
                        callee:
                          kind:
                            Function:
                              id: 469
                          ty:
                            Function:
                              signature_index: 0
                        arguments: []
                    ty:
                      Aggregate:
                        aggregate_index: 0
              ty: Unit
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 1
                  value:
                    kind:
                      AggregateGet:
                        scope_index: 0
                        local_index: 0
                        value_index: 1
                    ty: I32
              ty: Unit
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 2
                  value:
                    kind:
                      AggregateGet:
                        scope_index: 0
                        local_index: 0
                        value_index: 0
                    ty: F64
              ty: Unit
            - kind:
                Block:
                  scope_index: 2
                  expressions:
                    - kind:
                        LocalSet:
                          scope_index: 0
                          local_index: 4
                          value:
                            kind:
                              LocalGet:
                                scope_index: 0
                                local_index: 2
                            ty: F64
                      ty: Unit
                    - kind:
                        LocalSet:
                          scope_index: 0
                          local_index: 5
                          value:
                            kind:
                              Block:
                                scope_index: 1
                                expressions:
                                  - kind:
                                      LocalSet:
                                        scope_index: 0
                                        local_index: 3
                                        value:
                                          kind:
                                            LocalGet:
                                              scope_index: 0
                                              local_index: 1
                                          ty: I32
                                    ty: Unit
                                  - kind:
                                      Block:
                                        scope_index: 0
                                        expressions:
                                          - kind:
                                              F64ConvertI32:
                                                value:
                                                  kind:
                                                    LocalGet:
                                                      scope_index: 0
                                                      local_index: 3
                                                  ty: I32
                                            ty: F64
                                    ty: F64
                            ty: F64
                      ty: Unit
                    - kind:
                        Block:
                          scope_index: 0
                          expressions:
                            - kind:
                                Add:
                                  left:
                                    kind:
                                      LocalGet:
                                        scope_index: 0
                                        local_index: 4
                                    ty: F64
                                  right:
                                    kind:
                                      LocalGet:
                                        scope_index: 0
                                        local_index: 5
                                    ty: F64
                              ty: F64
                      ty: F64
              ty: F64
      ty: F64
    static_data: []
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
    params_count: 0
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - F64
    params_count: 0
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 470
      name: 241
imports: []
memories: []
aggregates:
  - values:
      - F64
      - I32
    offsets:
      - 0
      - 8
    layout:
      size: 16
      align: 8
    decl_to_phys:
      - 1
      - 0
static_entries: []
start_function: ~
